# arch_research

./: .gitignore  brevo.py  brevo_dataset.py  capo.py  capo_dataset.py  depo.py  depo_dataset.py  gpt2.py  gpt_ttt.py  lano.py  lano_dataset.py  mano.py  mano_dataset.py  mini_gpt2_rope.py  pyproject.toml  requirements.txt  sitecustomize.py  train_capo.py  train_capo_ttt.py
arch_research/: __init__.py  cli.py  config.py
arch_research/data/: __init__.py  batch.py  tokenizers.py
arch_research/models/: __init__.py  gpt2.py  gpt2_rope.py  gpt_ttt.py  registry.py
arch_research/tasks/: __init__.py  base.py  brevo.py  capo.py  capo_task.py  common.py  depo.py  lano.py  mano.py  registry.py  synthetic_tasks.py
arch_research/training/: __init__.py  metrics.py  trainer.py
scripts/: eval.py  install_flash_attn_slurm.sh  train.py  train_capo.py  train_capo_ttt.py
src/tttlab/: __init__.py
src/tttlab/models/: __init__.py  common.py
src/tttlab/tasks/: __init__.py  depo.py  lano.py  mano.py
src/tttlab/training/: __init__.py  capo_ttt.py
tests/: test_capo_training_smoke.py  test_gpt_integration.py  test_gpt_ttt_integration.py  test_task_metrics_integration.py
