[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arch_research"
version = "0.1.0"
description = "Architecture research experiments and synthetic tasks"
requires-python = ">=3.10"

[tool.setuptools]
py-modules = [
  "brevo_dataset",
  "capo_dataset",
  "depo_dataset",
  "gpt2",
  "gpt_ttt",
  "lano_dataset",
  "mano_dataset",
  "mini_gpt2_rope",
  "train_capo_ttt",
]
