[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arch_research"
version = "0.1.0"
description = "Architecture research experiments and synthetic tasks"
requires-python = ">=3.10"

[tool.setuptools]
py-modules = [
  "brevo",
  "capo",
  "depo",
  "gpt2",
  "gpt2_rope",
  "gpt_ttt",
  "lano",
  "mano",
  "train_capo",
]
