[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arch_research"
version = "0.1.0"
description = "Architecture research experiments and synthetic tasks"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["arch_research*"]
